--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>This is the title of the webpage!</title>
   </head>
   <body>
-    <image url="/images/character-mats/spellweaver.png">
+    <img src="/images/character-mats/spellweaver.png">
   </body>
 </html>
