--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is the title of the webpage!</title>
+    <title>This is the title of the webpage!</title>.
+    <script type="text/javascript" src="data/attack_modifiers.js"></script>
+    <script type="text/javascript" >
+		var tData = JSON.parse(attack_modifiers);
+		console.log(tData);
+    </script>
   </head>
   <body>
     <img src="/images/character-mats/spellweaver.png">
