--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>This is the title of the webpage!</title>.
-    <script type="text/javascript" src="/data/attack_modifiers.js"></script>
+    <script type="text/javascript" src="/data/attack-modifiers.js"></script>
     <script type="text/javascript" >
-		var tData = JSON.parse(attack_modifiers);
+		var tData = JSON.parse(attack-modifiers);
 		console.log(tData);
     </script>
   </head>
