--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>This is the title of the webpage!</title>.
     <script type="text/javascript" src="/data/attack-modifiers.js"></script>
     <script type="text/javascript" >
-		var tData = JSON.parse(attack-modifiers);
+		var tData = JSON.parse("attack-modifiers");
 		console.log(tData);
     </script>
   </head>
