--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		});
 		}
 		obj_JSON = init();
-		console.log(obj_JSON);		</script>
+		console.log(actual_JSON);		</script>
 	</head>
 	<body>
 		<img src="/images/character-mats/spellweaver.png">
