--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 				function loadJSON(callback) {
 		var xobj = new XMLHttpRequest();
 		xobj.overrideMimeType("application/json");
-		xobj.open('GET', '/data/attack-modifiers.js', true); // Replace 'my_data' with the path to your file
+		xobj.open('GET', '/data/attack-modifiers.js', false); // Replace 'my_data' with the path to your file
 		xobj.onreadystatechange = function () {
 		if (xobj.readyState == 4 && xobj.status == "200") {
 		// Required use of an anonymous callback as .open will NOT return a value but simply returns undefined in asynchronous mode
@@ -16,6 +16,7 @@
 		};
 		xobj.send(null);
 		}
+		
 		function init() {
 		loadJSON(function(response) {
 		// Parse JSON string into object
