--- a/index.html
+++ b/index.html
@@ -3,28 +3,15 @@
 	<head>
 		<title>This is the title of the webpage!</title>.
 		<script type="text/javascript" >
-			var obj_JSON;
-				function loadJSON(callback) {
-		var xobj = new XMLHttpRequest();
-		xobj.overrideMimeType("application/json");
-		xobj.open('GET', '/data/attack-modifiers.js', false); // Replace 'my_data' with the path to your file
-		xobj.onreadystatechange = function () {
-		if (xobj.readyState == 4 && xobj.status == "200") {
-		// Required use of an anonymous callback as .open will NOT return a value but simply returns undefined in asynchronous mode
-		callback(xobj.responseText);
-		}
-		};
-		xobj.send(null);
-		}
-		
-		function init() {
-		loadJSON(function(response) {
-		// Parse JSON string into object
-		var actual_JSON = JSON.parse(response);
-		});
-		}
-		obj_JSON = init();
-		console.log(JSON.stringify(obj_JSON));		</script>
+			var request = new XMLHttpRequest();
+			request.open('GET','/data/attack-modifiers.js');
+			request.responseType = 'json';
+			request.send();
+			request.onload = function() {
+				var attackModifiers = request.response;
+				console.log(JSON.stringify(attackModifiers));
+			}
+			</script>
 	</head>
 	<body>
 		<img src="/images/character-mats/spellweaver.png">
