--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 				var myList = document.createElement('ul');
 				for (var j = 0; j< jsonObj.length; j++) {
 					var newItem = document.createElement('li');
-					newItem.textContent = '<img src="' + jsonObj[1].image + '">';
+					var newImage = document.createElement('IMG');
+					newImage.src = jsonObj[j].image;
+					newItem.appendChild(newImage);
 					myList.appendChild(newItem);
 				}
 				deckElem.appendChild(myList);
