--- a/index.html
+++ b/index.html
@@ -34,11 +34,13 @@
 
 <body>
 	<!--<img src="/images/character-mats/spellweaver.png">-->
-	<div class="mdc-card">
-  <!-- ... content ... -->
-	<img src="/images/attack-modifiers/top-small.jpg">
+	<div class="mdc-layout-grid">
+  <div class="mdc-layout-grid__inner">
+    <div class="mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-phone mdc-card"><img src="/images/attack-modifiers/top-small.jpg"></div>
+
+  </div>
 </div>
-	<div id="deck"></div>
+		<div id="deck"></div>
 </body>
 
 </html>
