--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<!--<img src="/images/character-mats/spellweaver.png">-->
 	<div class="mdc-layout-grid">
   <div class="mdc-layout-grid__inner">
-    <div class="mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-phone mdc-card rounded"><img src="/images/attack-modifiers/top-small.jpg"></div>
+    <img class="mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-12-phone mdc-card rounded" src="/images/attack-modifiers/top-small.jpg">
 
   </div>
 </div>
