--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 	<!--<img src="/images/character-mats/spellweaver.png">-->
 	<header>
-		<div class="mdc-top-app-bar__row">
+		<div class="mdc-top-app-bar__row mdc-top-app-bar--fixed" style="background-color:black;">
 	<section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
 		<a href="#" class="material-icons mdc-top-app-bar__navigation-icon">menu</a>
 		<span class="mdc-top-app-bar__title">Attack Modifiers</span>
@@ -44,7 +44,7 @@
 	</header>
 	<div class="mdc-layout-grid">
   <div class="mdc-layout-grid__inner">
-    <img class="mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-10-tablet mdc-layout-grid__cell--span-12-phone mdc-card rounded" src="/images/attack-modifiers/top-small.jpg">
+    <img class="mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-10-tablet mdc-layout-grid__cell--span-12-phone mdc-card rounded" src="/images/attack-modifiers/top-small.jpg">
 
   </div>
 </div>
