removing background color

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 	<!--<img src="/images/character-mats/spellweaver.png">-->
 	<header>
-		<div class="mdc-top-app-bar__row mdc-top-app-bar--fixed" style="background-color:black;">
+		<div class="mdc-top-app-bar__row mdc-top-app-bar--fixed">
 	<section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
 		<a href="#" class="material-icons mdc-top-app-bar__navigation-icon">menu</a>
 		<span class="mdc-top-app-bar__title">Attack Modifiers</span>
