--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				myList.appendChild(newItem);*/
 			}
 			/*deckElem.appendChild(myList);*/
-			function drawCard() {
+			var drawCard = function () {
 				var discardPile = document.getElementById("discard");
 				var min=0;
     		var max=20;
@@ -53,7 +53,7 @@
 	<div class="mdc-layout-grid">
   <div class="mdc-layout-grid__inner">
     <img onClick="drawCard()" class="mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-10-tablet mdc-layout-grid__cell--span-12-phone mdc-card rounded" src="/images/attack-modifiers/top-small.jpg">
-		<img id="discard" class="mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-10-tablet mdc-layout-grid__cell--span-12-phone mdc-card rounded" src="">
+		<img id="discard" style="background-color:gray" class="mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-10-tablet mdc-layout-grid__cell--span-12-phone mdc-card rounded" src="">
 
   </div>
 </div>
