--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 			var min = 0;
 			var max = 20;
 			var random = Math.floor(Math.random() * (+max - +min)) + +min;
-			discardPile.url = '/images/' + attackModifiers[random].image;
+			alert("begin");
+			discardPile.src = '/images/' + attackModifiers[random].image;
+			alert("end");
 		}
 
 
