updating some css and adding an image for the sidebar

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 
 <body>
-	<aside class="mdc-drawer mdc-drawer--dismissible" style="margin-top:-10px">
+	<aside class="mdc-drawer mdc-drawer--dismissible attempt" style="margin-top:-10px">
 	    <div class="mdc-drawer__content">
 	      <div class="mdc-list">
 	        <a class="mdc-list-item mdc-list-item--activated" href="#" aria-current="page">
