--- a/index.html
+++ b/index.html
@@ -14,34 +14,7 @@
 		crossorigin="anonymous"></script>
 		<meta name="viewport" content="width=device-width">
 		<script type="text/javascript">
-		var attackModifiers;
-		function drawCard() {
-		var discardPile = document.getElementById("discard");
-		var min = 0;
-		var max = attackModifiers.length;
-		var random = Math.floor(Math.random() * (+max - +min)) + +min;
-		discardPile.src = '/images/' + attackModifiers[random].image;
-		}
-		var request = new XMLHttpRequest();
-		request.open('GET', '/data/am_base_player.js');
-		request.responseType = 'json';
-		request.send();
-		request.onload = function() {
-		attackModifiers = request.response;
-		/*populateDeck(attackModifiers);*/
-		}
-		function populateDeck(jsonObj) {
-		var deckElem = document.getElementById("deck");
-		var myList = document.createElement('ul');
-		for (var j = 0; j < jsonObj.length; j++) {
-		var newItem = document.createElement('li');
-		var newImage = document.createElement('IMG');
-		newImage.src = '/images/' + jsonObj[j].image;
-		/*newItem.appendChild(newImage);
-		myList.appendChild(newItem);*/
-		}
-		/*deckElem.appendChild(myList);*/
-		}
+		
 		</script>
 	</head>
 	<body>
@@ -82,7 +55,7 @@
 				<div class="mdc-top-app-bar__row">
 					<section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
 						<a href="#" class="material-icons mdc-top-app-bar__navigation-icon" style="text-decoration:none;color:black">menu</a>
-						<span class="mdc-top-app-bar__title" style="font-family:'Pirata One';font-size: 36px;color:black">Attack Modifier Deck</span>
+						<span class="mdc-top-app-bar__title" style="font-family:'Pirata One';font-size: 36px;color:black">Attack Modifier Deck<p id="stats"></p></span>
 					</section>
 				</div>
 			</header>
@@ -90,7 +63,7 @@
 				
 				<div class="mdc-layout-grid">
 					<div class="mdc-layout-grid__inner">
-						<img id="hand" onClick="drawCard()" class="mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-10-tablet mdc-layout-grid__cell--span-12-phone mdc-card rounded" src="/images/attack-modifiers/top-small.jpg">
+						<img id="hand" class="mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-10-tablet mdc-layout-grid__cell--span-12-phone mdc-card rounded" src="/images/attack-modifiers/top-small.jpg">
 						<img id="discard" class="mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-10-tablet mdc-layout-grid__cell--span-12-phone mdc-card rounded" src="">
 					</div>
 				</div>
