--- a/index_test.html
+++ b/index_test.html
@@ -23,7 +23,7 @@
 			// 	activeDeck.draw();
 			// 	console.log("activeDeck");
 			// });
-			var activeCharacter = new Character("kurt");
+			var activeCharacter = new Character("kurt", "mindthief perks");
 			console.log("activeCharacter");
 		}		
 	</script>
