--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 		<link href='https://fonts.googleapis.com/css?family=Pirata One' rel='stylesheet'>
+		<script src="/source/character.js"></script>
+		<script src="/source/deck.js"></script>
 		<script src="bundle.js" async></script>
 		<link rel="stylesheet" href="bundle.css">
 		<script
