Lots of updates
New values for attack modifier cards, fixed issues with saving, and card filtering.  Add modPile and globalModCards functions.

--- a/index_test.html
+++ b/index_test.html
@@ -12,6 +12,7 @@
 		  crossorigin="anonymous">
 	  	
 	</script>
+	<script src="/source/utility.js"></script>
 	<script src="/source/character.js"></script>
 	<script src="/source/deck.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -23,7 +24,7 @@
 			// 	activeDeck.draw();
 			// 	console.log("activeDeck");
 			// });
-			var activeCharacter = new Character("kurt", "mindthief perks");
+			var activeCharacter = new Character("kurt", characterClasses.mindthief);
 			console.log("activeCharacter");
 		}		
 	</script>
