--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 		<link href='https://fonts.googleapis.com/css?family=Pirata One' rel='stylesheet'>
 		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-		<script src="https://raw.githubusercontent.com/v4venletta/v4venletta.github.io/master/source/character.js"></script>
+		<script src="/source/character.js"></script>
 		<script src="/source/deck.js"></script>
 		<link rel="stylesheet" href="bundle.css">
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
