attempting to get safari to recognize clicks

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 			<main class="main-content" id="main-content">
 				<div class="mdc-layout-grid">
 					<div class="mdc-layout-grid__inner">
-						<img id="hand" class="mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-10-tablet mdc-layout-grid__cell--span-10-phone mdc-card rounded" src="/images/attack-modifiers/top-small.jpg">
-						<img id="discard" class="mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-10-tablet mdc-layout-grid__cell--span-10-phone mdc-card rounded" src="">
+						<img id="hand" class="mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-10-tablet mdc-layout-grid__cell--span-10-phone mdc-card rounded" src="/images/attack-modifiers/top-small.jpg" onclick = "void(0)">
+						<img id="discard" class="mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-10-tablet mdc-layout-grid__cell--span-10-phone mdc-card rounded" src="" onclick = "void(0)">
 					</div>
 				</div>
 				<div>
