--- a/index.html
+++ b/index.html
@@ -78,8 +78,10 @@
 		<main class="main-content" id="main-content">
 			<div class="mdc-layout-grid">
 				<div class="mdc-layout-grid__inner">
-					<img id="hand" class="mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone mdc-card rounded" src="/images/attack-modifiers/top-small.jpg">
-					<img id="discard" class="mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone mdc-card rounded" src="">
+					<div class="mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+					<img id="hand"  style="margin-right:auto;margin-left:auto;" class="mdc-card rounded" src="/images/attack-modifiers/top-small.jpg"></div>
+					<div class="mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+					<img id="discard" class="mdc-card rounded" style="margin-right:auto;margin-left:auto;" src=""></div>
 				</div>
 			</div>
 			<div>
