--- a/index.html
+++ b/index.html
@@ -101,26 +101,22 @@
 				<!-- Title cannot contain leading whitespace due to mdc-typography-baseline-top() -->
 				<h2 class="mdc-dialog__title" id="my-dialog-title">
 					<!--
-					-->Dialog Title
+					-->Choose a Card
 					<!--
 					-->
 				</h2>
 				<div class="mdc-dialog__content" id="my-dialog-content">
 					<div class="mdc-layout-grid">
 						<div class="mdc-layout-grid__inner">
-							<img id="recent" class="mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-10-tablet mdc-layout-grid__cell--span-2-phone mdc-card rounded_s" src="/images/attack-modifiers/top-small.jpg">
-							<img id="recent-1" class="mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-10-tablet mdc-layout-grid__cell--span-2-phone mdc-card rounded_s" src="">
+							<!-- <button type="button" class="mdc-button mdc-dialog__button" data-mdc-dialog-action="close"> -->
+								<input id="recent" type="image" class="mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-10-tablet mdc-layout-grid__cell--span-2-phone mdc-card rounded_s" data-mdc-dialog-action="close" src="">
+							<!-- </button> -->
+							<!-- <button type="button" class="mdc-button mdc-dialog__button" data-mdc-dialog-action="close"> -->
+								<input id="recent-1" type="image" class="mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-10-tablet mdc-layout-grid__cell--span-2-phone mdc-card rounded_s" data-mdc-dialog-action="close" src="">
+							<!-- </button> -->
 						</div>
 					</div>
 				</div>
-				<footer class="mdc-dialog__actions">
-					<button type="button" class="mdc-button mdc-dialog__button" data-mdc-dialog-action="no">
-						<span class="mdc-button__label">No</span>
-					</button>
-					<button type="button" class="mdc-button mdc-dialog__button" data-mdc-dialog-action="yes">
-						<span class="mdc-button__label">Yes</span>
-					</button>
-				</footer>
 			</div>
 		</div>
 		<div class="mdc-dialog__scrim"></div>
