Modal Background Change

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 	</div>
 	<div class="mdc-dialog" role="alertdialog" aria-modal="true" aria-labelledby="my-dialog-title" aria-describedby="my-dialog-content">
 		<div class="mdc-dialog__container">
-			<div class="mdc-dialog__surface">
+			<div class="mdc-dialog__surface" style="background-color: #ac8357">
 				<!-- Title cannot contain leading whitespace due to mdc-typography-baseline-top() -->
 				<h2 class="mdc-dialog__title" id="my-dialog-title">
 					<!--
