changing id of bless

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 						</div>
 						
 					</div>
-					<div class="mdc-list-item" style="height:auto;">
-						<div id="bless" style="width:100%;font-family: 'Pirata One';font-size:22px;">
-							<div style="width:25%;float:left;"><img id="bless" src="/images/attack-modifiers/bless_alpha.png" style="height:50px;width:50px;border:none;"></div>
+					<div id="bless" class="mdc-list-item" style="height:auto;">
+						<div style="width:100%;font-family: 'Pirata One';font-size:22px;">
+							<div style="width:25%;float:left;"><img src="/images/attack-modifiers/bless_alpha.png" style="height:50px;width:50px;border:none;"></div>
 							<div style="width:50%;display:flex;float:left;margin-left:10px;margin-top:15px;height:100%;align-items:center;">Bless</div>
 						</div>
 					</div>
