--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 							<img id="modDeck" style="opacity: 0.0;width:100%" class="mdc-card rounded" src="/images/attack-modifiers/base/player/am-p-01.png">
 						</div>
 					</div>
-					<div class="mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone" >
-						<img id="discard" class="mdc-card rounded" style="margin-right:auto;margin-left:auto;" src="">
+					<div class="mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+						<img id="discard" class="mdc-card rounded" style="margin-right:auto;margin-left:auto;opacity:0.0;" src="images/attack-modifiers/top-small.jpg">
 					</div>
 				</div>
 			</div>
