adding more animations

--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
 						</div>
 					</div>
 					<div class="mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-						<img id="discard" class="mdc-card rounded" style="margin-right:auto;margin-left:auto;opacity:0.0;" src="images/attack-modifiers/top-small.jpg">
+						<div id="discardParent" style="height:auto;margin-right:auto;margin-left:auto;background-color:#ac8357;background-size: cover;" class="mdc-card rounded" >
+							<img id="discard" class="mdc-card rounded" style="margin-right:auto;margin-left:auto;opacity:0.0;width:100%;" src="images/attack-modifiers/top-small.jpg">
+						</div>
 					</div>
 				</div>
 			</div>
