--- a/index.html
+++ b/index.html
@@ -86,10 +86,16 @@
 						</div>
 						<div class="mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
 							<div id="discardParent" style="height:auto;margin-right:auto;margin-left:auto;background-color:#ac8357;background-size: cover;" class="mdc-card rounded" >
-								<img id="discard" class="mdc-card rounded" style="margin-right:auto;margin-left:auto;opacity:0.0;width:100%;" src="images/attack-modifiers/top-small.jpg">
+								<div id="discard" class="cardFlip">
+								<div class="front">
+									<img class="mdc-card rounded" style="margin-right:auto;margin-left:auto;width:100%;" src="images/attack-modifiers/top-small.jpg">
+								</div>
+								<div class="back mdc-card rounded">
+									<img id="discarded" class="mdc-card rounded" style="margin-right:auto;margin-left:auto;width:100%;" src="images/attack-modifiers/base/player/am-p-01.png">
+								</div>
+							</div>
 							</div>
 						</div>
-						
 					</div>
 				</div>
 				<div>
