--- a/index.html
+++ b/index.html
@@ -134,6 +134,35 @@
 			</div>
 			<div class="mdc-dialog__scrim"></div>
 		</div>
+		<div id="perks" class="mdc-dialog mdc-dialog--scrollable" role="alertdialog" aria-modal="true" aria-labelledby="mdc-dialog-with-list-label" aria-describedby="mdc-dialog-with-list-description">
+			<div class="mdc-dialog__container">
+				<div class="mdc-dialog__surface" style="background-color: #ac8357">
+					<!-- Title cannot contain leading whitespace due to mdc-typography-baseline-top() -->
+					<h2 class="mdc-dialog__title" id="my-dialog-title">
+					<!--
+					-->Select Your Perks
+					<!--
+					-->
+					</h2>
+					<div id="perksContent" class="mdc-dialog__content" id="my-dialog-content">
+						<div class="mdc-layout-grid">
+							<div id="perksContent" class="mdc-layout-grid__inner">
+
+							</div>
+						</div>
+					</div>
+					<footer class="mdc-dialog__actions">
+						<button type="button" class="mdc-button mdc-dialog__button" data-mdc-dialog-action="close">
+							<span class="mdc-button__label">Cancel</span>
+						</button>
+						<button type="button" class="mdc-button mdc-dialog__button" data-mdc-dialog-action="accept">
+							<span class="mdc-button__label">Apply Perks</span>
+						</button>
+					</footer>	
+				</div>			
+			</div>
+			<div class="mdc-dialog__scrim"></div>
+		</div>			
 		<script src="bundle.js" async></script>
 		<div id="cards" style="overflow-x:auto;white-space:nowrap;height:90px;display:none;position: absolute;right: 0; bottom: 0; left: 0; background-color: #ac8357; text-align: center;">
 			<div id="discardpile" style="width:100%;height:auto;margin: 0; position: absolute; top: 50%; -ms-transform: translateY(-50%); transform: translateY(-50%);">
