--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 			</div>
 			<div class="mdc-dialog__scrim"></div>
 		</div>
-		<div id="perks" class="mdc-dialog" role="alertdialog" aria-modal="true" aria-labelledby="mdc-dialog-with-list-label" aria-describedby="mdc-dialog-with-list-description">
+		<div id="perks" class="mdc-dialog mdc-dialog--scrollable" role="alertdialog" aria-modal="true" aria-labelledby="mdc-dialog-with-list-label" aria-describedby="mdc-dialog-with-list-description">
 			<div class="mdc-dialog__container">
 				<div class="mdc-dialog__surface" style="background-color: #ac8357">
 					<!-- Title cannot contain leading whitespace due to mdc-typography-baseline-top() -->
@@ -145,9 +145,11 @@
 					-->
 					</h2>
 					<div class="mdc-dialog__content" id="my-dialog-content">
-						<ul id=perksContent class="mdc-list">
+						<div class="mdc-layout-grid">
+							<div id="perksContent" class="mdc-layout-grid__inner">
 
-						</ul>
+							</div>
+						</div>
 					</div>
 					<footer class="mdc-dialog__actions">
 						<button type="button" class="mdc-button mdc-dialog__button" data-mdc-dialog-action="close" style="font-family: 'Pirata One'">
