--- a/index.html
+++ b/index.html
@@ -144,12 +144,8 @@
 					<!--
 					-->
 					</h2>
-					<div class="mdc-dialog__content" id="my-dialog-content">
-						<div class="mdc-layout-grid">
-							<div id="perksContent" class="mdc-layout-grid__inner">
+					<div id="perksContent" class="mdc-dialog__content" id="my-dialog-content">
 
-							</div>
-						</div>
 					</div>
 					<footer class="mdc-dialog__actions">
 						<button type="button" class="mdc-button mdc-dialog__button" data-mdc-dialog-action="close" style="font-family: 'Pirata One'">
