--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 			<div class="mdc-top-app-bar__row">
 				<section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
 					<a href="#" class="demo-menu material-icons mdc-top-app-bar__navigation-icon" style="text-decoration:none;color:black">menu</a>
-					<span class="mdc-top-app-bar__title">Attack Modifier</span><span><img style="height:50px;width:60px;border:none;margin-left:20px;" id="chosen-class"></span>
+					<span class="mdc-top-app-bar__title" style="display: inline-flex; align-items: center;">
+						Attack Modifier
+						<img style="height:auto;width:9%;border:none;margin-left:20px;" id="chosen-class">
+					</span>
 				</section>
 			</div>
 		</header>
@@ -30,28 +33,80 @@
 							<div class="mdc-select__selected-text" style="font-family: 'Pirata One';font-size:24px;"></div>
 							<div class="mdc-select__menu mdc-menu mdc-menu-surface demo-width-class">
 								<ul class="mdc-list" style="font-family: 'Pirata One';font-size:24px">
+									<li class="mdc-list-item" data-value="beasttyrant">
+										<img style="width:10%;height:auto" src="/images/class-icons/beasttyrant.png">
+										<p style="padding:10px">Beast Tyrant</p>
+									</li>
+									<li class="mdc-list-item" data-value="berserker">
+										<img style="width:10%;height:auto" src="/images/class-icons/berserker.png">
+										<p style="padding:10px">Berserker</p>
+									</li>			
+									<li class="mdc-list-item" data-value="bladeswarm">
+										<img style="width:10%;height:auto" src="/images/class-icons/bladeswarm.png">
+										<p style="padding:10px">Bladeswarm</p>
+									</li>
 									<li class="mdc-list-item" data-value="brute">
-										<img style="width:60px;height:50px" src="/images/class-icons/brute.png">
+										<img style="width:10%;height:auto" src="/images/class-icons/brute.png">
 										<p style="padding:10px">Brute</p>
 									</li>
-									<li class="mdc-list-item" data-value="spellweaver">
-										<img style="width:60px;height:50px" src="/images/class-icons/spellweaver.png">
-										<p style="padding:10px">Spellweaver</p>
+									<li class="mdc-list-item" data-value="cragheart">
+										<img style="width:10%;height:auto" src="/images/class-icons/cragheart.png">
+										<p style="padding:10px">Cragheart</p>
+									</li>									
+									<li class="mdc-list-item" data-value="diviner">
+										<img style="width:10%;height:auto" src="/images/class-icons/diviner.png">
+										<p style="padding:10px">Diviner</p>
+									</li>
+									<li class="mdc-list-item" data-value="doomstalker">
+										<img style="width:10%;height:auto" src="/images/class-icons/doomstalker.png">
+										<p style="padding:10px">Doomstalker</p>
+									</li>
+									<li class="mdc-list-item" data-value="elementalist">
+										<img style="width:10%;height:auto" src="/images/class-icons/elementalist.png">
+										<p style="padding:10px">Elementalist</p>
+									</li>									
+									<li class="mdc-list-item" data-value="mindthief">
+										<img style="width:10%;height:auto" src="/images/class-icons/mindthief.png">
+										<p style="padding:10px">Mindthief</p>
+									</li>					
+									<li class="mdc-list-item" data-value="nightshroud">
+										<img style="width:10%;height:auto" src="/images/class-icons/nightshroud.png">
+										<p style="padding:10px">Nightshroud</p>
+									</li>
+									<li class="mdc-list-item" data-value="plagueherald">
+										<img style="width:10%;height:auto" src="/images/class-icons/plagueherald.png">
+										<p style="padding:10px">Plagueherald</p>
+									</li>
+									<li class="mdc-list-item" data-value="quartermaster">
+										<img style="width:10%;height:auto" src="/images/class-icons/quartermaster.png">
+										<p style="padding:10px">Quartermaster</p>
+									</li>
+									<li class="mdc-list-item" data-value="sawbones">
+										<img style="width:10%;height:auto" src="/images/class-icons/sawbones.png">
+										<p style="padding:10px">Sawbones</p>
 									</li>
 									<li class="mdc-list-item" data-value="scoundrel">
-										<img style="width:60px;height:50px" src="/images/class-icons/scoundrel.png">
+										<img style="width:10%;height:auto" src="/images/class-icons/scoundrel.png">
 										<p style="padding:10px">Scoundrel</p>
 									</li>
-									<li class="mdc-list-item" data-value="cragheart">
-										<img style="width:60px;height:50px" src="/images/class-icons/cragheart.png">
-										<p style="padding:10px">Cragheart</p>
+									<li class="mdc-list-item" data-value="soothsinger">
+										<img style="width:10%;height:auto" src="/images/class-icons/soothsinger.png">
+										<p style="padding:10px">Soothsinger</p>
 									</li>
-									<li class="mdc-list-item" data-value="mindthief">
-										<img style="width:60px;height:50px" src="/images/class-icons/mindthief.png">
-										<p style="padding:10px">Mindthief</p>
+									<li class="mdc-list-item" data-value="spellweaver">
+										<img style="width:10%;height:auto" src="/images/class-icons/spellweaver.png">
+										<p style="padding:10px">Spellweaver</p>
+									</li>
+									<li class="mdc-list-item" data-value="summoner">
+										<img style="width:10%;height:auto" src="/images/class-icons/summoner.png">
+										<p style="padding:10px">Summoner</p>
+									</li>
+									<li class="mdc-list-item" data-value="sunkeeper">
+										<img style="width:10%;height:auto" src="/images/class-icons/sunkeeper.png">
+										<p style="padding:10px">Sunkeeper</p>
 									</li>
 									<li class="mdc-list-item" data-value="tinkerer">
-										<img style="width:60px;height:50px" src="/images/class-icons/tinkerer.png">
+										<img style="width:10%;height:auto" src="/images/class-icons/tinkerer.png">
 										<p style="padding:10px">Tinkerer</p>
 									</li>
 								</ul>
