--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						</div>
 						<div class="mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
 							<div id="discardParent" style="height:auto;margin-right:auto;margin-left:auto;background-color:#ac8357;background-size: cover;" class="mdc-card rounded" >
-								<div id="discard" class="cardFlip">
+								<div id="discard" class="cardFlip" style="z-index: -1;">
 								<div class="front">
 									<img class="mdc-card rounded" style="margin-right:auto;margin-left:auto;width:100%;" src="images/attack-modifiers/top-small.jpg">
 								</div>
