added -1 button and updated some CSS

--- a/index.html
+++ b/index.html
@@ -34,79 +34,79 @@
 							<div class="mdc-select__menu mdc-menu mdc-menu-surface demo-width-class">
 								<ul class="mdc-list" style="font-family: 'Pirata One';font-size:24px">
 									<li class="mdc-list-item" data-value="beasttyrant">
-										<img style="width:10%;height:auto" src="/images/class-icons/beasttyrant.png">
+										<img style="width:25px;height:auto" src="/images/class-icons/beasttyrant.png">
 										<p style="padding:10px">Beast Tyrant</p>
 									</li>
 									<li class="mdc-list-item" data-value="berserker">
-										<img style="width:10%;height:auto" src="/images/class-icons/berserker.png">
+										<img style="width:25px;height:auto" src="/images/class-icons/berserker.png">
 										<p style="padding:10px">Berserker</p>
 									</li>			
 									<li class="mdc-list-item" data-value="bladeswarm">
-										<img style="width:10%;height:auto" src="/images/class-icons/bladeswarm.png">
+										<img style="width:25px;height:auto" src="/images/class-icons/bladeswarm.png">
 										<p style="padding:10px">Bladeswarm</p>
 									</li>
 									<li class="mdc-list-item" data-value="brute">
-										<img style="width:10%;height:auto" src="/images/class-icons/brute.png">
+										<img style="width:25px;height:auto" src="/images/class-icons/brute.png">
 										<p style="padding:10px">Brute</p>
 									</li>
 									<li class="mdc-list-item" data-value="cragheart">
-										<img style="width:10%;height:auto" src="/images/class-icons/cragheart.png">
+										<img style="width:25px;height:auto" src="/images/class-icons/cragheart.png">
 										<p style="padding:10px">Cragheart</p>
 									</li>									
 									<li class="mdc-list-item" data-value="diviner">
-										<img style="width:10%;height:auto" src="/images/class-icons/diviner.png">
+										<img style="width:25px;height:auto" src="/images/class-icons/diviner.png">
 										<p style="padding:10px">Diviner</p>
 									</li>
 									<li class="mdc-list-item" data-value="doomstalker">
-										<img style="width:10%;height:auto" src="/images/class-icons/doomstalker.png">
+										<img style="width:25px;height:auto" src="/images/class-icons/doomstalker.png">
 										<p style="padding:10px">Doomstalker</p>
 									</li>
 									<li class="mdc-list-item" data-value="elementalist">
-										<img style="width:10%;height:auto" src="/images/class-icons/elementalist.png">
+										<img style="width:25px;height:auto" src="/images/class-icons/elementalist.png">
 										<p style="padding:10px">Elementalist</p>
 									</li>									
 									<li class="mdc-list-item" data-value="mindthief">
-										<img style="width:10%;height:auto" src="/images/class-icons/mindthief.png">
+										<img style="width:25px;height:auto" src="/images/class-icons/mindthief.png">
 										<p style="padding:10px">Mindthief</p>
 									</li>					
 									<li class="mdc-list-item" data-value="nightshroud">
-										<img style="width:10%;height:auto" src="/images/class-icons/nightshroud.png">
+										<img style="width:25px;height:auto" src="/images/class-icons/nightshroud.png">
 										<p style="padding:10px">Nightshroud</p>
 									</li>
 									<li class="mdc-list-item" data-value="plagueherald">
-										<img style="width:10%;height:auto" src="/images/class-icons/plagueherald.png">
+										<img style="width:25px;height:auto" src="/images/class-icons/plagueherald.png">
 										<p style="padding:10px">Plagueherald</p>
 									</li>
 									<li class="mdc-list-item" data-value="quartermaster">
-										<img style="width:10%;height:auto" src="/images/class-icons/quartermaster.png">
+										<img style="width:25px;height:auto" src="/images/class-icons/quartermaster.png">
 										<p style="padding:10px">Quartermaster</p>
 									</li>
 									<li class="mdc-list-item" data-value="sawbones">
-										<img style="width:10%;height:auto" src="/images/class-icons/sawbones.png">
+										<img style="width:25px;height:auto" src="/images/class-icons/sawbones.png">
 										<p style="padding:10px">Sawbones</p>
 									</li>
 									<li class="mdc-list-item" data-value="scoundrel">
-										<img style="width:10%;height:auto" src="/images/class-icons/scoundrel.png">
+										<img style="width:25px;height:auto" src="/images/class-icons/scoundrel.png">
 										<p style="padding:10px">Scoundrel</p>
 									</li>
 									<li class="mdc-list-item" data-value="soothsinger">
-										<img style="width:10%;height:auto" src="/images/class-icons/soothsinger.png">
+										<img style="width:25px;height:auto" src="/images/class-icons/soothsinger.png">
 										<p style="padding:10px">Soothsinger</p>
 									</li>
 									<li class="mdc-list-item" data-value="spellweaver">
-										<img style="width:10%;height:auto" src="/images/class-icons/spellweaver.png">
+										<img style="width:25px;height:auto" src="/images/class-icons/spellweaver.png">
 										<p style="padding:10px">Spellweaver</p>
 									</li>
 									<li class="mdc-list-item" data-value="summoner">
-										<img style="width:10%;height:auto" src="/images/class-icons/summoner.png">
+										<img style="width:25px;height:auto" src="/images/class-icons/summoner.png">
 										<p style="padding:10px">Summoner</p>
 									</li>
 									<li class="mdc-list-item" data-value="sunkeeper">
-										<img style="width:10%;height:auto" src="/images/class-icons/sunkeeper.png">
+										<img style="width:25px;height:auto" src="/images/class-icons/sunkeeper.png">
 										<p style="padding:10px">Sunkeeper</p>
 									</li>
 									<li class="mdc-list-item" data-value="tinkerer">
-										<img style="width:10%;height:auto" src="/images/class-icons/tinkerer.png">
+										<img style="width:25px;height:auto" src="/images/class-icons/tinkerer.png">
 										<p style="padding:10px">Tinkerer</p>
 									</li>
 								</ul>
@@ -125,6 +125,12 @@
 						<div style="width:100%;font-family: 'Pirata One';font-size:22px;">
 							<div style="width:25%;float:left;"><img src="/images/attack-modifiers/curse_alpha.png" style="height:50px;width:50px;border:none;"></div>
 							<div style="width:50%;display:flex;float:left;margin-left:10px;margin-top:15px;height:100%;align-items:center;">Curse</div>
+						</div>
+					</div>
+					<div id="minusone" class="mdc-list-item" style="height:auto;">
+						<div style="width:100%;font-family: 'Pirata One';font-size:22px;">
+							<div style="width:25%;float:left;"><img src="/images/attack-modifiers/minus_one_alpha.png" style="height:50px;width:50px;border:none;"></div>
+							<div style="width:50%;display:flex;float:left;margin-left:10px;margin-top:15px;height:100%;align-items:center;">-1</div>
 						</div>
 					</div>
 				</div>
@@ -199,7 +205,7 @@
 					<!--
 					-->
 					</h2>
-					<div id="perksContent" class="mdc-dialog__content" id="my-dialog-content">
+					<div id="perksContent" class="mdc-dialog__content">
 
 					</div>
 					<footer class="mdc-dialog__actions">
